--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "nobelium",
   "version": "1.3.0",
-  "homepage": "https://nobelium.js.org",
+  "homepage": "https://shushupost.vercel.app/",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/craigary/nobelium.git"
+    "url": "https://github.com/SHUSHU010829/nobelium"
   },
   "author": {
-    "name": "Craig Hart",
-    "email": "i@craigary.net",
-    "url": "http://craigary.net"
+    "name": "SHUSHU",
+    "email": "shushu90829@gmail.com",
+    "url": "https://github.com/SHUSHU010829"
   },
   "scripts": {
     "dev": "next dev",
@@ -49,8 +49,8 @@
     "tailwindcss": "^3.3.5"
   },
   "bugs": {
-    "url": "https://github.com/craigary/nobelium/issues",
-    "email": "i@craigary.net"
+    "url": "https://github.com/SHUSHU010829/nobelium/issues",
+    "email": "shushu90829@gmail.com"
   },
   "pnpm": {
     "patchedDependencies": {
